<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".popupDeleteDialogActivity">

    <TextView
        android:id="@+id/tvDeleteProfile"
        style="@style/TILStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_delete_Profile" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtPassword"
        style="@style/TILStyle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_password">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryDark" />
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="onCancel"
            android:text="@string/btnCancel"
            android:theme="@style/MyButton" />

        <Button
            android:id="@+id/btnDeleteProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="deleteProfile"
            android:text="@string/btnDelete"
            android:theme="@style/MyButton" />
    </LinearLayout>


</LinearLayout>

