<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddUserActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarAddUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:titleTextAppearance="@style/ToolbarTextAppearance.Title"
        app:subtitleTextAppearance="@style/ToolbarTextAppearance.Subtitle"
        style="@style/MyToolbar" />

    <SearchView
        android:id="@+id/searchUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/layout_user_found"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageUser"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:src="@drawable/standard_picture" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtFullName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal|left|center_vertical"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:text="@string/txtName"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtUsername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical|left|start"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingTop="6dp"
                android:text="@string/txtLastChat"
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </LinearLayout>


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgCheck"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="37dp"
                android:layout_marginBottom="11dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_check_black" />

            <Button
                android:id="@+id/btnAddUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="17dp"
                android:layout_marginBottom="12dp"
                android:layout_weight="1"
                android:text="@string/btnAddUser"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:theme="@style/MyButton"/>
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</LinearLayout>